name:                iron-mq
version:             0.1.1.0
synopsis:            Iron.IO message queueing client library
description:         A client library for communication with Iron.IO's message queueing service
homepage:            https://github.com/arnoblalam/iron_mq_haskell
license:             GPL-3
license-file:        LICENSE
author:              Arnob Alam
maintainer:          arnoblalam@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files: README.md, CHANGES.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.IronMQ, Network.IronMQ.Types
  -- other-modules:       
  other-extensions:    OverloadedStrings, DeriveGeneric
  build-depends:       base >=4.6 && <=4.8 , wreq >=0.3, lens >=4.6, aeson >=0.7, text >=0.11, http-client >=0.4, containers >=0.5 && <= 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2

Benchmark bench
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       src, bench
  main-is:              Benchmark.hs
  build-depends:        base >=4.6 && <=4.8, criterion, wreq >=0.3, text >=0.11, lens >=4.6, containers >=0.5, http-client >=0.4, aeson >=0.7
  ghc-options:          -Wall
                        -O2
  default-language:     Haskell2010

Executable bench-test
  build-depends:        base >=4.6 && <=4.8, criterion, wreq >=0.3, text >=0.11, lens >=4.6, containers >=0.5, http-client >=0.4, aeson >=0.7
  hs-source-dirs:       src
  main-is:              Main.hs
  ghc-options:          -Wall
                        -O2
  default-language:     Haskell2010
